# dbowser

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
assets/: dbowser-demo.tape
dbowser/: config.py  main.py  postgres_driver.py  tui.py  ui_screens.py
docker/: init.sql
tests/: conftest.py  test_integration_tui.py
